--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.0.0",
+    "critters": "^0.0.23",
     "next": "13.4.19",
     "react": "^18",
     "react-dom": "^18",
